<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/greyBack">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">


        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image_black_24dp" />


        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/place_name"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="end"
                    android:text="@string/distance"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:foregroundGravity="left"
                    android:max="5" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:text="@string/review"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/place_open_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_now"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/place_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:textSize="16sp"
                android:textStyle="italic" />


        </LinearLayout>

                <Button
                    android:id="@+id/btn_show_map"
                    style="@style/Button"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/show_on_map" />

                <Button
                    android:id="@+id/call_now"
                    style="@style/Button2"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_width="350dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/call_now"/>

                <Button
                    android:id="@+id/more_details"
                    style="@style/Button3"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_width="350dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_details"/>

    </LinearLayout>
</RelativeLayout>